# multi-tab-editor

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  main.cpp  qt_text_editor_plan.md  test_large_file.txt  test_recent_files.txt  test_session1.txt  test_session2.txt
.github/workflows/: README.md  build-test.yml  ci.yml
docs/html/: ErrorHandler_8h.html  ErrorHandler_8h_source.html  FileExplorer_8h_source.html  FindReplacePanel_8h_source.html  MainWindow_8h.html  MainWindow_8h_source.html  SettingsManager_8h.html  SettingsManager_8h_source.html  SyntaxHighlighter_8h.html  SyntaxHighlighter_8h_source.html  TabWidget_8h.html  TabWidget_8h_source.html  TextEditor_8h.html  TextEditor_8h_source.html  Utils_8h.html  Utils_8h_source.html  annotated.html  classErrorHandler-members.html  classErrorHandler.html  classFileExplorer-members.html  classFileExplorer.html  classFindReplacePanel-members.html  classFindReplacePanel.html  classLineNumberArea-members.html  classLineNumberArea.html  classMainWindow-members.html  classMainWindow.html  classSettingsManager-members.html  classSettingsManager.html  classSyntaxHighlighter-members.html  classSyntaxHighlighter.html  classTabWidget-members.html  (+25 more)
resources/: application.qrc
src/: ErrorHandler.cpp  ErrorHandler.h  FileExplorer.cpp  FileExplorer.h  FindReplacePanel.cpp  FindReplacePanel.h  MainWindow.cpp  MainWindow.h  SettingsManager.cpp  SettingsManager.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TabWidget.cpp  TabWidget.h  TextEditor.cpp  TextEditor.h  ThemeManager.cpp  ThemeManager.h  Utils.cpp  Utils.h
(+87 files in other folders)
